@@ -3,6 +3,7 @@ Changes for 3.4.10rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-12644] fixed filter being partially reset when using pagination in availability report page (Ivo)
 ..F....... [ZBX-12882] fixed in popup window being allowed to select applications from different hosts when editing item mass update form (agriscenko)
 .......PS. [ZBX-13788] fixed host availability stuck in unknown state after proxy changes (wiper)
 
@@ -1230,6 +1231,7 @@ Changes for 3.0.18rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-12644] fixed filter being partially reset when using pagination in availability report page (Ivo)
 ..F....... [ZBX-12882] fixed in popup window being allowed to select applications from different hosts when editing item mass update form (agriscenko)
 .......PS. [ZBX-13788] fixed host availability stuck in unknown state after proxy changes (wiper)
 
